--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -1,85 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_game_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity">
 
-        <TextView
-            android:id="@+id/game_label"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/game_time"/>
-        <EditText
-            android:id="@+id/game_minutes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:text="@string/no_time"
-            android:layout_toEndOf="@id/game_label"
-            android:layout_toRightOf="@id/game_label"
-            android:layout_alignBaseline="@id/game_label"/>
-        <TextView
-            android:id="@+id/semicolon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/semicolon"
-            android:layout_toEndOf="@id/game_minutes"
-            android:layout_toRightOf="@id/game_minutes"
-            android:layout_alignBaseline="@id/game_label"/>
-        <EditText
-            android:id="@+id/game_seconds"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:text="@string/no_time"
-            android:layout_toEndOf="@id/semicolon"
-            android:layout_toRightOf="@id/semicolon"
-            android:layout_alignBaseline="@id/game_label"/>
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/game_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/game_time"/>
+            <EditText
+                android:id="@+id/game_minutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:text="@string/min"
+                android:layout_toEndOf="@id/game_label"
+                android:layout_toRightOf="@id/game_label"
+                android:layout_alignBaseline="@id/game_label"/>
+            <TextView
+                android:id="@+id/semicolon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/semicolon"
+                android:layout_toEndOf="@id/game_minutes"
+                android:layout_toRightOf="@id/game_minutes"
+                android:layout_alignBaseline="@id/game_label"/>
+            <EditText
+                android:id="@+id/game_seconds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:text="@string/no_time"
+                android:layout_toEndOf="@id/semicolon"
+                android:layout_toRightOf="@id/semicolon"
+                android:layout_alignBaseline="@id/game_label"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        </RelativeLayout>
 
-        <TextView
-            android:id="@+id/card_type"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/card_type"/>
-        <Spinner
-            android:id="@+id/card_type_spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/card_type"
-            android:layout_toRightOf="@id/card_type"
-            android:layout_alignBaseline="@id/card_type"/>
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
 
-    </RelativeLayout>
+            <TextView
+                android:id="@+id/card_type"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/card_type"/>
+            <Spinner
+                android:id="@+id/card_type_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/card_type"
+                android:layout_toRightOf="@id/card_type"
+                android:layout_alignBaseline="@id/card_type"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <Button
+        android:id="@+id/new_game"
         android:text="@string/start_game"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="startGame"/>
+        android:onClick="startGame"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="100px"/>
 
-</LinearLayout>
+</RelativeLayout>
