--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Quizinator"
+        android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="32dp"
         android:layout_above="@+id/newGameButton"
