--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -20,10 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
-
             <TextView
                 android:id="@+id/game_label"
                 android:layout_width="wrap_content"
@@ -39,7 +36,7 @@
                 android:layout_toRightOf="@id/game_label"
                 android:layout_alignBaseline="@id/game_label"/>
             <TextView
-                android:id="@+id/semicolon"
+                android:id="@+id/game_semicolon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/semicolon"
@@ -52,20 +49,16 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:text="@string/no_time"
-                android:layout_toEndOf="@id/semicolon"
-                android:layout_toRightOf="@id/semicolon"
+                android:layout_toEndOf="@id/game_semicolon"
+                android:layout_toRightOf="@id/game_semicolon"
                 android:layout_alignBaseline="@id/game_label"/>
-
         </RelativeLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
-
             <TextView
                 android:id="@+id/card_type"
                 android:layout_width="wrap_content"
@@ -78,7 +71,61 @@
                 android:layout_toEndOf="@id/card_type"
                 android:layout_toRightOf="@id/card_type"
                 android:layout_alignBaseline="@id/card_type"/>
+        </RelativeLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+            <TextView
+                android:id="@+id/card_count_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/card_count"/>
+            <EditText
+                android:id="@+id/card_count"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"/>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+            <TextView
+                android:id="@+id/card_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/card_time"/>
+            <EditText
+                android:id="@+id/card_minutes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:text="@string/no_time"
+                android:layout_toEndOf="@id/card_label"
+                android:layout_toRightOf="@id/card_label"
+                android:layout_alignBaseline="@id/card_label"/>
+            <TextView
+                android:id="@+id/card_semicolon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/semicolon"
+                android:layout_toEndOf="@id/card_minutes"
+                android:layout_toRightOf="@id/card_minutes"
+                android:layout_alignBaseline="@id/card_minutes"/>
+            <EditText
+                android:id="@+id/card_seconds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:text="@string/three_secs"
+                android:layout_toEndOf="@id/card_semicolon"
+                android:layout_toRightOf="@id/card_semicolon"
+                android:layout_alignBaseline="@id/card_label"/>
         </RelativeLayout>
 
     </LinearLayout>
@@ -91,6 +138,6 @@
         android:onClick="startGame"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="100px"/>
+        android:layout_marginBottom="50dp" />
 
 </RelativeLayout>
