--- a/app/src/main/res/layout/activity_new_game_settings.xml
+++ b/app/src/main/res/layout/activity_new_game_settings.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_game_settings"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity">
+    tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context="com.seniordesign.wolfpack.quizinator.Activities.NewGameSettingsActivity">
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -128,16 +128,14 @@
                 android:layout_alignBaseline="@id/card_label"/>
         </RelativeLayout>
 
+        <Button
+            android:id="@+id/new_game"
+            android:text="@string/start_game"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="startGame"
+            android:layout_gravity="center_horizontal"/>
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/new_game"
-        android:text="@string/start_game"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="startGame"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dp" />
-
-</RelativeLayout>
+</ScrollView>
