added more tests to main menu, end of game, and filtering. Were at 81% coverage right now

--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -25,7 +25,7 @@
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Game"
+        android:text="@string/new_game"
         android:onClick="showGameSettings"
         />
 
