--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -18,7 +18,7 @@
         android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="32dp"
-        android:layout_above="@+id/newGameButton"
+        android:layout_above="@id/newGameButton"
         android:layout_centerHorizontal="true" />
     <Button
         android:id="@+id/newGameButton"
