Added initialize deck that makes a testing deck.

--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -50,6 +50,7 @@
         </FrameLayout>
 
         <TextView
+            android:id="@+id/cardTimeBackground"
             android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
