--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -23,12 +23,13 @@
             android:text="Score: "
             />
         <TextView
+            android:id="@+id/gamePlayTimeText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:textSize="20dp"
-            android:text="Score: "
+            android:text="Game Time: 00:00"
             />
     </android.support.v7.widget.Toolbar>
 
@@ -58,7 +59,7 @@
             android:textColor="@android:color/white"
             android:textSize="20dp"
             android:layout_marginBottom="10dp"
-            android:text="Time Left : 30.00"/>
+            android:text="Time Left : 00.00"/>
         <FrameLayout
             android:id="@+id/answerArea"
             android:layout_width="match_parent"
