--- a/app/src/main/res/layout/activity_end_of_gameplay.xml
+++ b/app/src/main/res/layout/activity_end_of_gameplay.xml
@@ -63,7 +63,7 @@
             android:text="High Score Time: "
             android:layout_below="@id/endOfGameText" />
         <Button
-            android:id="@+id/newGameButton"
+            android:id="@+id/goToMainMenu"
             android:layout_marginTop="20dp"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
