--- a/app/src/main/res/layout/activity_end_of_gameplay.xml
+++ b/app/src/main/res/layout/activity_end_of_gameplay.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="78dp" />
     <LinearLayout
         android:layout_marginTop="20dp"
-        android:layout_below="@+id/endOfGameText"
+        android:layout_below="@id/endOfGameText"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
