--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -12,21 +12,35 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.MainMenuActivity"
     tools:showIn="@layout/app_bar_navigation_drawer">
-    <Button
-        android:id="@+id/newGameButton"
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/new_game"
-        android:onClick="showGameSettings"
-        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="32dp"
-        android:layout_above="@id/newGameButton"
+        android:layout_above="@id/mainMenuButtons"
         android:layout_centerHorizontal="true" />
+    <LinearLayout
+        android:id="@+id/mainMenuButtons"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/newGameButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/new_game"
+            android:onClick="showGameSettings"
+            />
+        <Button
+            android:id="@+id/joinGameButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/join_game"
+            />
+    </LinearLayout>
+
 
 </RelativeLayout>
