--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textStyle="bold"
-        android:textSize="32dp"
+        android:textSize="32sp"
         android:layout_above="@id/mainMenuButtons"
         android:layout_centerHorizontal="true" />
     <LinearLayout
@@ -27,11 +27,18 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical">
+        <!--<Button-->
+            <!--android:id="@+id/newGameButton"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/new_game"-->
+            <!--android:onClick="showGameSettings"-->
+            <!--/>-->
         <Button
             android:id="@+id/newGameButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/new_game"
+            android:text="@string/solo_game"
             android:onClick="showGameSettings"
             />
         <Button
@@ -40,7 +47,11 @@
             android:layout_height="wrap_content"
             android:text="@string/join_game"
             />
+        <Button
+            android:id="@+id/hostGameButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/host_game"
+            />
     </LinearLayout>
-
-
 </RelativeLayout>
