--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -19,10 +19,11 @@
         android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="32sp"
-        android:layout_above="@id/mainMenuButtons"
+        android:id="@+id/title"
         android:layout_centerHorizontal="true" />
     <LinearLayout
         android:id="@+id/mainMenuButtons"
+        android:layout_below="@id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
