--- a/app/src/main/res/layout/content_navigation_drawer.xml
+++ b/app/src/main/res/layout/content_navigation_drawer.xml
@@ -19,7 +19,7 @@
         android:text="@string/app_name"
         android:textStyle="bold"
         android:textSize="32sp"
-        android:layout_above="@id/mainMenuButtons"
+        android:layout_above="@+id/mainMenuButtons"
         android:layout_centerHorizontal="true" />
     <LinearLayout
         android:id="@+id/mainMenuButtons"
