--- a/app/src/main/res/layout/fragment_multiple_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_answer.xml
@@ -1,54 +1,59 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.seniordesign.wolfpack.quizinator.Fragments.MultipleChoiceAnswerFragment">
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_weight="1"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/choiceAButton"
+        android:orientation="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:onClick="answerClicked"
-            android:text="Choice A"
-            />
-        <Button
-            android:id="@+id/choiceBButton"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/choiceAButton"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:onClick="answerClicked"
+                android:text="Choice A"
+                />
+            <Button
+                android:id="@+id/choiceBButton"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:onClick="answerClicked"
+                android:text="Choice B"
+                />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="match_parent"
-            android:onClick="answerClicked"
-            android:text="Choice B"
-            />
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/choiceCButton"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:onClick="answerClicked"
+                android:text="Choice C"
+                />
+            <Button
+                android:id="@+id/choiceDButton"
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:onClick="answerClicked"
+                android:text="Choice D"
+                />
+        </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-        <Button
-            android:id="@+id/choiceCButton"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:onClick="answerClicked"
-            android:text="Choice C"
-            />
-        <Button
-            android:id="@+id/choiceDButton"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:onClick="answerClicked"
-            android:text="Choice D"
-            />
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
