--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -11,12 +11,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.HostGameActivity">
 
+    <Button
+        android:id="@+id/start_game_settings"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Game Settings"
+        android:onClick="startGameSettingsActivity" >
+    </Button>
+
     <fragment
         class="com.seniordesign.wolfpack.quizinator.WifiDirect.DeviceListFragment"
         android:id="@+id/frag_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </fragment>
+
     <fragment
         class="com.seniordesign.wolfpack.quizinator.WifiDirect.DeviceDetailFragment"
         android:id="@+id/frag_detail"
