--- a/app/src/main/res/layout/fragment_multiple_choice_answer.xml
+++ b/app/src/main/res/layout/fragment_multiple_choice_answer.xml
@@ -21,6 +21,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice A"
+                android:textSize="20dp"
                 />
             <Button
                 android:id="@+id/choiceBButton"
@@ -29,6 +30,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice B"
+                android:textSize="20dp"
                 />
         </LinearLayout>
 
@@ -44,6 +46,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice C"
+                android:textSize="20dp"
                 />
             <Button
                 android:id="@+id/choiceDButton"
@@ -52,6 +55,7 @@
                 android:layout_height="match_parent"
                 android:onClick="answerClicked"
                 android:text="Choice D"
+                android:textSize="20dp"
                 />
         </LinearLayout>
     </LinearLayout>
