--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -15,5 +15,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="sendCard"/>
+    <Button
+        android:text="@string/end_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="endGame"/>
 
 </RelativeLayout>
