--- a/app/src/main/res/layout/activity_manage_gameplay.xml
+++ b/app/src/main/res/layout/activity_manage_gameplay.xml
@@ -22,5 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="endGame"/>
+    <TextView
+        android:id="@+id/gamePlayTimeHostText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
