tons of ui redesign, removed the need for the DeviceDetailFragment and will be removing files in the next commit

--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -26,11 +26,11 @@
         android:layout_height="wrap_content" >
     </fragment>
 
-    <fragment
-        class="com.seniordesign.wolfpack.quizinator.Fragments.DeviceDetailFragment"
-        android:id="@+id/frag_detail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </fragment>
+    <!--<fragment-->
+        <!--class="com.seniordesign.wolfpack.quizinator.Fragments.DeviceDetailFragment"-->
+        <!--android:id="@+id/frag_detail"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" >-->
+    <!--</fragment>-->
 
 </LinearLayout>
