Added button to show decks, added activities for showing decks and editting decks, added button for new deck

--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -9,6 +9,10 @@
             android:id="@+id/nav_P2P_compatibility_check"
             android:title="Check P2P Compatibility"
             />
+        <item
+            android:id="@+id/nav_show_decks"
+            android:title="View and Edit Decks"
+            />
     <!--
         <item
             android:id="@+id/nav_application_settings"
