--- a/app/src/main/res/layout/activity_host_game.xml
+++ b/app/src/main/res/layout/activity_host_game.xml
@@ -15,7 +15,7 @@
         android:id="@+id/start_game_settings"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Game Settings"
+        android:text="@string/host_game_game_settings"
         android:onClick="startGameSettingsActivity" >
     </Button>
 
