Added the ability to add and remove cards from the deck.  The add feature has been tested, the remove one is waiting on Aaron's changes to the card DB.  Added functionality to the save and cancel buttons.

--- a/app/src/main/res/layout/activity_edit_deck.xml
+++ b/app/src/main/res/layout/activity_edit_deck.xml
@@ -62,7 +62,8 @@
         <Button
             android:text="@string/cancel"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:onClick="onCancelClick" />
         <Button
             android:text="@string/Delete"
             android:layout_width="wrap_content"
@@ -70,7 +71,8 @@
         <Button
             android:text="@string/save"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:onClick="onSaveClick" />
     </LinearLayout>
 
 </LinearLayout>
