--- a/app/src/main/res/layout/activity_decks.xml
+++ b/app/src/main/res/layout/activity_decks.xml
@@ -1,22 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_decks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.seniordesign.wolfpack.quizinator.Activities.DecksActivity">
-    <LinearLayout
-        android:layout_weight=".2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/new_deck"
-            android:onClick="newDeckClick"/>
-    </LinearLayout>
     
     <ListView
         android:id="@+id/list_of_decks"
@@ -24,6 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:id="@+id/new_item_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:background="@drawable/new_item_button"
+        android:layout_margin="10dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:onClick="newDeckClick"/>
 
 
-</LinearLayout>
+</RelativeLayout>
