Slightly adjusted the style of the previous commit

--- a/app/src/main/res/layout/activity_game_play.xml
+++ b/app/src/main/res/layout/activity_game_play.xml
@@ -23,7 +23,7 @@
             android:id="@+id/scoreText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:paddingRight="10dp"
             android:textSize="20dp"
@@ -36,7 +36,7 @@
             android:id="@+id/gamePlayTimeText"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:textColor="@android:color/white"
             android:paddingRight="10dp"
             android:textSize="20dp"
