--- a/app/src/main/res/layout/activity_decks.xml
+++ b/app/src/main/res/layout/activity_decks.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_decks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,16 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/new_item_button"
+    <android.support.design.widget.FloatingActionButton
+        app:srcCompat="@drawable/ic_plus_btn_24dp"
+        android:id="@+id/new_deck_button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/new_item_button"
-        android:layout_margin="10dp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:onClick="newDeckClick"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="newDeckClick" />
 
 
 </RelativeLayout>
