have the host display the current card

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#dd6000</color>
 
     <color name="layout_border_color">#FF111111</color>
+    <color name="question_background">#FFFAFAFA</color>
 </resources>
